--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
