--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "tailwindcss build src/styles.css -o dist/styles.css",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "build": "webpack"
